# file-distributor

./: .gitignore  CMakeLists.txt  README.md  testing.cpp
lib/: file_dist.cpp  file_dist.h
